bug report - outstanding bugs are listed here:

 http://sourceforge.net/tracker/?atid=106663&group_id=6663&func=browse

(to file another bug see the 'submit bug' button on this page).

====================================================================

0.76: please submit patches for this section with actual code/doc
      patches!

* pam_unix: removed superfluous use of static variables in md5 and bigcrypt
  routines, bringing us a step closer to thread-safeness.  Eliminated
  some variable indirection along the way.  (Bug 440107 - vorlon)
* pam_tally: remove #include of stdlib.h, which isn't needed by anything
  found in this module.  Can be readded if we find a real need for it at
  a later date. (Bug 436432 - vorlon)
* pam_tally: added an #include (was it really needed?) and made the
  pam_tally app install (with more pretty printing and a corrected
  Makefile dependency) motivated by a (red hat diff) courtesy of Harald
  Welte (Bug 436432 - agmorgan)
* more pam_limits changes (extracted from redhat version) courtesy of
  Harald Welte (Bug 436061 - agmorgan)
* configure.in changes to help support non-Linux environments courtesy
  of Scott T. Emery (Bug 422563 - agmorgan)
* made a pam_cracklib enhancement to interpret -ve limits in a
  sensible fashion contributed by Werner Puschitz (Bug 413162 -
  agmorgan)
* another fix for the latest number of rlimits available to pam_limits
  (Bug 424060 - agmorgan)
* removed stale link from pam_pwdb documentation (Bug 433460 - agmorgan)
* pam_appl.sgml change - more discussion of choosing a service name
  (Bug 417512 - agmorgan)
* more specific linking requirements for -lndbm for pam_userdb - from
  David Lee (Bug 417339 - agmorgan)
* a large number of small changes to make AIX support better (Bug
  416229 - agmorgan)
* $(MAKE) instead of 'make' - from Scott T. Emery (Bug 422144 -
  agmorgan)
* c++ header fixes for pam_misc.h and pam_client.h - from Alexandre
  Sagala (Bug 420270 - agmorgan)